:wrench: Prevent table from overflowing on small devices

--- a/_sass/_junkdrawer.scss
+++ b/_sass/_junkdrawer.scss
@@ -245,6 +245,10 @@
 }
 
 .style-table {
+  table-layout: fixed;
+  max-width: 100%;
+  width: 100%;
+
   th {
     text-align: left;
   }
@@ -252,6 +256,8 @@
   td {
     padding: 0.5rem;
     border-bottom: $border-thin solid $color-border;
+    word-break: break-word;
+    display: table-cell;
   }
 
   .fix {
